Add 2 elements to better manage the scrolling and deep linking:   - allow the link base to be in the config (data-isso-base-location)   - add a "data-isso-target-message" data property on #isso-thread.     this is a message element id thaht will be scrolled into view.

--- a/isso/js/app/text/comment.jade
+++ b/isso/js/app/text/comment.jade
@@ -1,3 +1,4 @@
+- var baseLocation = conf['base-location']
 div(class='isso-comment' id='isso-#{comment.id}')
     if conf.gravatar
         div(class='avatar')
@@ -14,7 +15,7 @@ div(class='isso-comment' id='isso-#{comment.id}')
                 span(class='author')
                     = bool(comment.author) ? comment.author : i18n('comment-anonymous')
             span(class="spacer") &bull;
-            a(class='permalink' href='#isso-#{comment.id}')
+            a(class='permalink' href='#{baseLocation}isso-#{comment.id}')
                 time(title='#{humanize(comment.created)}' datetime='#{datetime(comment.created)}')
             span(class='note')
                 = comment.mode == 2 ? i18n('comment-queued') : comment.mode == 4 ? i18n('comment-deleted') : ''
